# jpd_bot

./: .gitignore  README.md  chat.py  makefile  pyproject.toml
project_files/: STAKEHOLDER_REQUIREMENTS.md
