[project]
name = "jpd-bot"
version = "0.1.0"
description = "Could not parse version constraint: flask"
authors = [
    {name = "Martin Gleason",email = "marty.data.scientist@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "anthropic (>=0.76.0,<0.77.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
